Add Manager implemented in SDL.
There is a bug in TASTE-OpenGeode with nested states.
TODO: FIX this (Manager) component

--- a/TASTE_Integration/Native_Implementation/work/manager/SDL/src/Manager.cfg
+++ b/TASTE_Integration/Native_Implementation/work/manager/SDL/src/Manager.cfg
@@ -8,7 +8,8 @@ cfg -Goverlap scale
 cfg -Nstyle rounded
 cfg -Nshape record
 cfg -Elen 1
+Coverage_Timer
+coverage_timer
 
 current_mode
 process_tc
-Coverage_Timer
