Fix Manager and Implement HK_Task

--- a/TASTE_Integration/Native_Implementation/work/manager/SDL/src/Manager.cfg
+++ b/TASTE_Integration/Native_Implementation/work/manager/SDL/src/Manager.cfg
@@ -8,8 +8,9 @@ cfg -Goverlap scale
 cfg -Nstyle rounded
 cfg -Nshape record
 cfg -Elen 1
-Coverage_Timer
-coverage_timer
 
-current_mode
 process_tc
+coverage_timer
+go_to_idle
+current_mode
+go_to_coverage
