--- a/TASTE_Integration/Native_Implementation/.gitignore
+++ b/TASTE_Integration/Native_Implementation/.gitignore
@@ -18,7 +18,7 @@ work/sensors/*
 work/sensors/implem/default/Ada/*
 !work/sensors/implem/default/Ada/src
 work/sensors/implem/default/Ada/src/*
-!work/sensors/implem/default/Ada/src/*.adb
+!work/sensors/implem/default/Ada/src/sensors.adb
 
 # Except Platform source files
 !work/platform
@@ -27,7 +27,7 @@ work/platform/*
 work/platform/implem/default/Ada/*
 !work/platform/implem/default/Ada/src
 work/platform/implem/default/Ada/src/*
-!work/platform/implem/default/Ada/src/*.adb
+!work/platform/implem/default/Ada/src/platform.adb
 
 # Except Storage source files
 !work/storage
