Exclude everythin in work except user files

--- a/TASTE_Integration/Native_Implementation/.gitignore
+++ b/TASTE_Integration/Native_Implementation/.gitignore
@@ -6,10 +6,8 @@
 InterfaceView.aadl
 DataView.aadl
 
-# Ignore whole autogen files in work directory
-work/build/*
-work/binaries/*
-work/dataview/*
+# Ignore everything in work directory
+work/*
 
 # Except Sensors source files
 !work/sensors
