Remove QGenAda softlink from gitignore

--- a/TASTE_Integration/Native_Implementation/.gitignore
+++ b/TASTE_Integration/Native_Implementation/.gitignore
@@ -105,6 +105,7 @@ work/ttc/implem/default/Ada/src/*
 # Except ACS_Algorithm source files
 !work/acs_algorithm
 work/acs_algorithm/*
+!work/acs_algorithm/QGenAda
 !work/acs_algorithm/implem
 work/acs_algorithm/implem/*
 !work/acs_algorithm/implem/default
